deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-email-sender
  namespace: sre-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar-email-sender
  template:
    metadata:
      labels:
        app: sonar-email-sender
    spec:
      containers:
      - name: sonar-email-sender
        image: reg.redrock.team/sre/sonar_email_sender:1.3
        ports:
        - containerPort: 80
