deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-email-service
  namespace: sre-tools
spec:
  selector:
    app: sonar-email-sender
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
